# echo-mvp

./: .gitignore  Dockerfile  pyproject.toml  railway.toml  start.sh
.claude/agents/: content-creator.md  data-analyst.md  fullstack-developer.md  growth-operator.md  qa-engineer.md  security-auditor.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/core/: config.yaml
echo/: __init__.py  chunker.py  embedder.py  indexer.py  journal.py  main.py  models.py  parser.py  qa.py  retriever.py
static/: index.html
tests/: test_echo_mvp.py
