[project]
name = "echo"
version = "0.1.0"
description = "Echo - AI-native cognitive co-pilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "lancedb>=0.17.0",
    "openai>=1.58.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.7",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=18.0.0",
    "tiktoken>=0.8.0",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echo"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
